Adding GA. Also fixed end / endif error

--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -17,7 +17,7 @@
     </footer>
   </article>
   {% include _related_posts.html %}
-  {% include _navigation.html %}
   {% include _footer.html %}
+  {% include _navigation.htgoogle_analytics %}  
 </body>
 </html>
