--- a/_includes/_related_posts.html
+++ b/_includes/_related_posts.html
@@ -2,9 +2,9 @@
   <h1 class="h3">Related Posts</h1>
   <ul class="large-list">
   {% for post in site.related_posts limit: 3 %}
-    <li>
-      <a href="{{ post.url }}" title="{{post.title}}">
-        <span class="meta">{{ post.date | date_to_long_string }}</span>
+    <li class="large-list--item">
+      <a href="{{ post.url }}" title="{{post.title}}" class="large-list--link">
+        <date class="meta">{{ post.date | date_to_long_string }}</date>
           {{ post.title }}
       </a>
     </li>
