Changing markup and css to be less horrible. More classes on things. More comments in css.

--- a/_sass/_grid.scss
+++ b/_sass/_grid.scss
@@ -2,6 +2,9 @@
    GRID
    ========================================================================== */
 
+/* Single and responsive column
+   ========================================================================== */
+
 .single-column {
   margin:0 auto;
   padding:1em;
