--- a/_sass/_skins.scss
+++ b/_sass/_skins.scss
@@ -2,3 +2,12 @@
   border-bottom:1px dotted $grey-light;
 }
 
+.bg-dark {
+  color:#fff;
+  background:$grey-dark;
+}
+
+.rounded {
+  border-radius:3px;
+}
+
