--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -1,9 +1,7 @@
 code {
-  background:$grey-dark;
-  -webkit-border-radius:3px;
-  -moz-border-radius:3px;
-  border-radius:3px;
   display:block;
+  @extend .bg-dark;
+  @extend .rounded;
   font-family: 
     Consolas, 
     "Andale Mono WT", 
@@ -23,8 +21,10 @@ code {
   letter-spacing:0.1em;
   margin:1em 0;
   overflow:scroll;
-  padding:1em;
+  padding:20px;
+  max-width:100%;
   @include breakpoint(one-hand) {
-    padding:1em 0.2em;
+    padding:10px;
+    font-size:12px;
   }
 }
