--- a/_sass/_spacing.scss
+++ b/_sass/_spacing.scss
@@ -1,15 +1,15 @@
 .row {
-  padding:2em 0;
+  padding:20px 0;
 }
 
 .mt-1 {
-  margin-top:1em;
+  margin-top:10px;
 }
 
 .mt-2 {
-  margin-top:2em;
+  margin-top:20px;
 }
 
 .mt-4 {
-  margin-top:8em;
+  margin-top:40px;
 }
