--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -2,6 +2,7 @@
 <html lang="en"> 
 <head>
 	<meta charset="utf-8">
+  <link href='http://fonts.googleapis.com/css?family=Average+Sans' rel='stylesheet' type='text/css'>
   <title>
     {{ site.title }}
   </title>
