--- a/_includes/_related_posts.html
+++ b/_includes/_related_posts.html
@@ -1,7 +1,7 @@
-<article class="single-column mt-4">
-  <h1 class="h3">Related Posts</h1>
+<article class="single-column mt-2"> 
+  <h1 class="h3 sans-serif">Related Posts</h1> 
   <ul class="large-list">
-  {% for post in site.related_posts limit: 3 %}
+  {% for post in site.related_posts limit: 5 %}
     <li class="large-list--item">
       <a href="{{ post.url }}" title="{{post.title}}" class="large-list--link">
         <date class="meta">{{ post.date | date_to_long_string }}</date>
