So many new sass things. Much refactoring to be done.

--- a/_sass/_lists.scss
+++ b/_sass/_lists.scss
@@ -1,3 +1,11 @@
+/* ==========================================================================
+   LISTS
+   ========================================================================== */
+
+
+/* Archive list
+   ========================================================================== */
+
 .large-list {
   font-size:$type-4;  
 
@@ -16,11 +24,18 @@
       color:$orange;
       .meta {color:$orange;}
     }
+
     .meta {
       display:block; 
     }
+
   }
 }
+
+
+
+/* Posts
+   ========================================================================== */
 
 .post {
     ul,dl {
