--- a/_sass/_skins.scss
+++ b/_sass/_skins.scss
@@ -7,7 +7,9 @@
   background:$grey-dark;
 }
 
-.rounded {
-  border-radius:3px;
-}
+.rounded { border-radius:3px; }
 
+.secondary-skin {
+  background: #eee;
+  border-top: 1px solid #e3e3e3;
+}
