--- a/_sass/i.scss
+++ b/_sass/i.scss
@@ -10,7 +10,7 @@
 //@import url(http://fonts.googleapis.com/css?family=Raleway);)
 @import "google_fonts";
 
-@import "vars";
+@import "variables";
 @import "colors";
 @import "grid";
 @import "type";
@@ -22,3 +22,5 @@
 @import "images";
 @import "syntax";
 @import "code";
+@import "styles";
+
