--- a/_sass/_spacing.scss
+++ b/_sass/_spacing.scss
@@ -1,15 +1,22 @@
-.row {
-  padding:20px 0;
-}
+/* ==========================================================================
+   SPACING
 
-.mt-1 {
-  margin-top:10px;
-}
+   - Padding
+   - Spacing
+   ========================================================================== */
 
-.mt-2 {
-  margin-top:20px;
-}
 
-.mt-4 {
-  margin-top:40px;
-}
+
+/* Padding
+   ========================================================================== */
+
+.row {  padding:20px 0; }
+
+
+
+/* Margins
+   ========================================================================== */
+
+.mt-1 { margin-top:10px; }
+.mt-2 { margin-top:20px; }
+.mt-4 { margin-top:40px; }
