--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -10,10 +10,11 @@ $margin:;
 
 $type-1:64px;
 $type-2:48px;
+$type-quote:32px;
 $type-3:24px;
 $type-4:20px;
-$type-5:12px;
-$type-6:10px;
+$type-5:16px;
+$type-6:12px;
 
 $copy:$type-4;
 
