--- a/_layouts/posts.html
+++ b/_layouts/posts.html
@@ -1,23 +1,34 @@
 {% include _head.html %}
 <body>
+  {% if page.header_img %}
+  <article>
+  <header style="background:#eee url({{page.header_img}}) no-repeat center center;" class="header-full-bleed center row">  
+    <h1 style="color:{{page.text_color}};" class="h1 full-bleed-title">{{page.title}}</h1>
+  </header>
+  <div class="single-column">
+      {{content}}
+  </div>
+  </article>
+  {% else %}
   <article class="mt-2 post single-column">
     <!-- This is where the title: in your front matter gets dropped in.-->
-    <h1>
+    <header>
+      {% if page.author %}
+      <p class="post-footer">
+        By {{page.author}}
+        on <time datetime="{{page.date}}">{{page.date | date: "%d %B %Y"}}</time> 
+      </p>
+      {% endif %}
+    <h1 class="h1">
       {{page.title}}
     </h1>
+  </header>
     <!-- This is where post content lives -->
       {{content}}
     <!-- end of post content -->
-     <footer class="mt-2">
-      {% if page.author %}
-      <p class="meta author">
-      <time  class="meta" datetime="{{page.date}}">{{page.date | date: "%d %B %Y"}}</time><br />
-      By: <a href="" rel="author">{{page.author}}</a></p>
-      {% endif %}
-    </footer>
   </article>
+  {% endif %}
   {% include _related_posts.html %}
-  {% include _navigation.html %}
   {% include _footer.html %}
   {% include _google_analytics.html %}
 </body>
