--- a/_includes/_archives.html
+++ b/_includes/_archives.html
@@ -1,6 +1,5 @@
 <article>
-  <h1 class="h2 ct">Archives</h1>
-  <ul class="large-list ct mt-1">
+  <ul class="large-list ct">
     {% for post in site.posts limit: 25 %}
       <li class="large-list--item">
         <a href="{{ post.url }}" title="{{post.title}}" class="large-list--link">
