--- a/_includes/_footer.html
+++ b/_includes/_footer.html
@@ -1,41 +1,41 @@
 <footer class="site-footer sans-serif">
   <div class="single-column">
-  <nav role="navigation" class="site-nav">
-    <ul class="site-nav--list center">
-      <li class="site-nav--item">
-        <a 
-          href="{{site.url}}/" 
-          title="Home" 
-          class="site-nav--link">
+    <nav role="navigation" class="site-nav">
+      <ul class="site-nav--list center">
+        <li class="site-nav--item">
+          <a 
+            href="{{site.url}}/" 
+            title="Home" 
+            class="site-nav--link">
 
-          Home
+            Home
 
-        </a>
-      </li>
-      <li class="site-nav--item">
-        <a 
-          href="{{site.url}}/about" 
-          title="About" 
-          class="site-nav--link">
+          </a>
+        </li>
+        <li class="site-nav--item">
+          <a 
+            href="{{site.url}}/about" 
+            title="About" 
+            class="site-nav--link">
 
-          About
+            About
 
-        </a>
-      </li>
-      <li class="site-nav--item">
-        <a 
-          href="{{site.url}}/archives" 
-          title="Archives" 
-          class="site-nav--link">
+          </a>
+        </li>
+        <li class="site-nav--item">
+          <a 
+            href="{{site.url}}/archives" 
+            title="Archives" 
+            class="site-nav--link">
 
-          Archives
+            Examples
 
-        </a>
-      </li>
-    </ul>
-  </nav>
-  <p class="meta center"> 
-    © 2013. Built using <a href="http://jk-l.cc" title="jkl on jekyll">JKL.</a>
-  </p>
-</div>
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <p class="meta center"> 
+      © 2013. Built using <a href="http://jk-l.cc" title="jkl on jekyll" class="footer-link">JKL.</a>
+    </p>
+  </div>
 </footer>
