--- a/_layouts/media.html
+++ b/_layouts/media.html
@@ -1,21 +1,20 @@
 {% include _head.html %}
 <body>
   <article class="mt-2 post single-column">
-    <!-- This is where the title: in your front matter gets dropped in.-->
-    <header>
+    <h1 class="h1">
+      {{page.title}}
+    </h1>
+    <!-- This is where post content lives -->
+      {{content}}
+    <!-- end of post content -->
       {% if page.author %}
+    <footer>
       <p class="post-footer">
         By {{page.author}}
         on <time datetime="{{page.date}}">{{page.date | date: "%d %B %Y"}}</time> 
       </p>
       {% endif %}
-    <h1 class="h1">
-      {{page.title}}
-    </h1>
-  </header>
-    <!-- This is where post content lives -->
-      {{content}}
-    <!-- end of post content -->
+    </footer>
   </article>
   {% include _related_posts.html %}
   {% include _footer.html %}
