--- a/_includes/_head.html
+++ b/_includes/_head.html
@@ -1,7 +1,8 @@
-<!DOCTYPE html> 
-<html lang="en"> 
+<!DOCTYPE html>
+<html lang="en">
 <head>
 	<meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=Edge">
   <title>
     {{ site.title }}
   </title>
